--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,10 +6,10 @@
 <display-name>Archetype Created Web Application</display-name>
 
 
-    <context-param>
-        <param-name>logbackConfigLocation</param-name>
-        <param-value>classpath:conf/logback.xml</param-value>
-    </context-param>
+    <!--<context-param>-->
+        <!--<param-name>logbackConfigLocation</param-name>-->
+        <!--<param-value>classpath:conf/logback.xml</param-value>-->
+    <!--</context-param>-->
 
     <listener>
         <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
