--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,13 +46,17 @@
     </servlet-mapping>
 
     <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/404.ftl</location>
+    </error-page>
+    <error-page>
         <error-code>404</error-code>
-        <location>/404.jsp</location>
+        <location>/404.ftl</location>
     </error-page>
 
     <error-page>
         <error-code>500</error-code>
-        <location>/500.jsp</location>
+        <location>/500.ftl</location>
     </error-page>
 
 
